<resources>
    <string name="app_name">DatabindingMVVM</string>

    <string name="error.network.connection">Vous n\'êtes pas connecté à Internet&#8230;</string>
    <string name="error.network.problem">Problème de connexion&#8230;</string>
    <string name="error.network.time_out">La connexion a expirée&#8230;</string>
    <string name="error.unknown">Il semble que quelque chose n\'ait pas fonctionné correctement&#8230;</string>

    <string name="main.label_sign_up">Sign Up</string>
    <string name="main.label_list_users">User list</string>

    <string name="form_username">Username</string>
    <string name="form_first_name">First Name</string>
    <string name="form_last_name">Last Name</string>
    <string name="form_email">Email</string>
    <string name="form_password">Password</string>

    <string name="form.fill_in_all_fields">Please fill in all the fields</string>
    <string name="form.signed_up_successfully">You signed up successfully !</string>
    <string name="form.sign_up">Sign up</string>
</resources>
